test/sema/unary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}

fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:5: error: 'unit' cannot be used as an operand to unary operator
    !foo();

    // CHECK: [[# @LINE + 1 ]]:5: error: 'unit' cannot be used as an operand to unary operator
    -foo();
}
